SXP: Add trigger for Robot on Neon
Change-Id: Ia84ff9abc5b1c73947de5fdfb460f4926ad73e63
Signed-off-by: Ivan Hrasko <ihrasko@cisco.com>

--- a/jjb/sxp/sxp-csit-basic.yaml
+++ b/jjb/sxp/sxp-csit-basic.yaml
@@ -14,6 +14,9 @@
     stream:
       - neon:
           branch: 'master'
+          trigger-jobs: '{project}-merge-{stream}'
+          # yamllint disable-line rule:line-length
+          repo-url: 'mvn:org.opendaylight.sxp/features-sxp/1.8.0-SNAPSHOT/xml/features'
       - fluorine:
           branch: 'stable/fluorine'
           trigger-jobs: '{project}-merge-{stream}'
