Ensure autorelease pull submodule HEAD of branch
Make sure that autorelease is always pulling the latest HEAD of branch
for all submodules. Push an update patch to releng/autorelease if it
is not.

Issue: RELENG-80
Change-Id: I04c8de08ed5da73030a036eeadece799b120b7a5
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-projects.yaml
+++ b/jjb/autorelease/autorelease-projects.yaml
@@ -6,6 +6,7 @@
       - 'autorelease-generate-release-notes-{stream}'
       - 'autorelease-release-{stream}':
           build-node: centos7-autorelease-8c-32g
+      - 'autorelease-update-submodules-{stream}'
       - 'autorelease-update-validate-jobs-{stream}'
       - 'autorelease-version-bump-{stream}':
           build-node: centos7-autorelease-8c-32g
