Ensure autorelease pull submodule HEAD of branch
Make sure that autorelease is always pulling the latest HEAD of branch
for all submodules. Push an update patch to releng/autorelease if it
is not.

Issue: RELENG-807
Change-Id: I04c8de08ed5da73030a036eeadece799b120b7a5
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -130,6 +130,14 @@
           mvn-version: '{mvn-version}'
       - wipe-local-maven-repo
       - jacoco-nojava-workaround
+      # Fetch latest head of branch
+      - shell: git submodule update --remote && git add .
+      - lf-infra-push-gerrit-patch:
+          project: '{project}'
+          gerrit-user: 'jenkins-$SILO'
+          gerrit-host: 'git.opendaylight.org'
+          gerrit-topic: 'autorelease-update-submodules'
+          gerrit-commit-message: 'Update submodules to latest HEAD of branch'
       - shell: "./scripts/list-project-dependencies.sh"
       - autorelease-determine-merge-order
       - autorelease-cfp:
