Discontinue obsolete run-sonar trigger macro
The only job still using this is ovsdb so discontinue the macro
and move the trigger into ovsdb.

Change-Id: I1b4db777afbe1286d7c3c0a31c1f179200028374
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/ovsdb/ovsdb-sonar.yaml
+++ b/jjb/ovsdb/ovsdb-sonar.yaml
@@ -37,9 +37,22 @@
 
     triggers:
       - timed: '{schedule-saturday}'
-      - gerrit-trigger-patch-sonar:
-          gerrit-server-name: '{gerrit-server-name}'
-          name: 'ovsdb'
+      - gerrit:
+          server-name: '{gerrit-server-name}'
+          trigger-on:
+            - comment-added-contains-event:
+                comment-contains-value: 'run-sonar$'
+          projects:
+            - project-compare-type: 'ANT'
+              project-pattern: '{project}'
+              branches:
+                - branch-compare-type: 'ANT'
+                  branch-pattern: '**/master'
+          skip-vote:
+            successful: true
+            failed: true
+            unstable: true
+            notbuilt: true
 
     builders:
       - shell: !include-raw-escape: setup-docker.sh
