Remove CLM jobs to comply with Sonatype's TOS
No easy way to just disable the jobs unfortunately. Since we
need to move fast, delete the jobs.

Issue: https://jira.linuxfoundation.org/browse/RELENG-1165
Change-Id: Ie62a2fffb4ea29f8e1abebe5fe16589a5269ee78
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-templates-java.yaml
+++ b/jjb/releng-templates-java.yaml
@@ -3,7 +3,9 @@
     name: odl-maven-jobs
 
     jobs:
-      - gerrit-maven-clm
+      # TODO: Add CLM jobs back once issue is resolved:
+      #       https://jira.linuxfoundation.org/browse/RELENG-1165
+      # - gerrit-maven-clm
 
       # TODO: Figure out what's wrong with the gerrit-maven-merge job.
       # - gerrit-maven-merge:
