Remove CLM jobs to comply with Sonatype's TOS
No easy way to just disable the jobs unfortunately. Since we
need to move fast, delete the jobs.

Issue: https://jira.linuxfoundation.org/browse/RELENG-1165
Change-Id: Ie62a2fffb4ea29f8e1abebe5fe16589a5269ee78
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/archetypes/archetypes.yaml
+++ b/jjb/archetypes/archetypes.yaml
@@ -2,7 +2,9 @@
 - project:
     name: archetypes-neon
     jobs:
-      - gerrit-maven-clm
+      # TODO: Add CLM jobs back once issue is resolved:
+      #       https://jira.linuxfoundation.org/browse/RELENG-1165
+      # - gerrit-maven-clm
       - '{project-name}-merge-{stream}':
           build-timeout: 180
           cron: '@daily'
