Update CentOS 7 builder to pick up new git version
This version of centos7-builder has a newer Git version the
autorelease project would like to utilize to automate ensuring
that the tip of it's supported branches are up to date with upstream.

Issue: RELENG-80
Change-Id: I276f6bd99f96f231717cdce507bfda568d198c92
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/defaults.yaml
+++ b/jjb/defaults.yaml
@@ -96,7 +96,7 @@
     docker_system_image: ZZCI - CentOS 7 - docker - 20180723-235456.035
     odl_system_count: 1
     odl_system_flavor: odl-highcpu-4
-    odl_system_image: ZZCI - CentOS 7 - builder - 20180802-220823.782
+    odl_system_image: ZZCI - CentOS 7 - builder - x86_64 - 20180823-152917.621
     openstack_system_count: 1
     openstack_system_flavor: odl-standard-4
     openstack_system_image: ZZCI - CentOS 7 - devstack - 20180723-235345.727
