--- a/jenkins-config/clouds/openstack/odlvex/centos7-autorelease-4c-16g.cfg
+++ b/jenkins-config/clouds/openstack/odlvex/centos7-autorelease-4c-16g.cfg
@@ -1,3 +1,3 @@
-IMAGE_NAME=ZZCI - CentOS 7 - builder - 20180802-220823.782
+IMAGE_NAME=ZZCI - CentOS 7 - builder - x86_64 - 20180823-152917.621
 VOLUME_SIZE=150
 HARDWARE_ID=odl-standard-4
