--- a/jenkins-config/clouds/openstack/odlvex/centos7-builder-4c-4g.cfg
+++ b/jenkins-config/clouds/openstack/odlvex/centos7-builder-4c-4g.cfg
@@ -1,2 +1,2 @@
-IMAGE_NAME=ZZCI - CentOS 7 - builder - 20180802-220823.782
+IMAGE_NAME=ZZCI - CentOS 7 - builder - x86_64 - 20180823-152917.621
 HARDWARE_ID=odl-highcpu-4
