Disable topoprocessing jobs on Jenkins
https://lists.opendaylight.org/pipermail/release/2018-August/015935.html

Change-Id: Ic10e23897b4ab7cd2dc6908b7c94606f0964e94f
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/topoprocessing/topoprocessing.yaml
+++ b/jjb/topoprocessing/topoprocessing.yaml
@@ -4,6 +4,7 @@
     jobs:
       - odl-maven-jobs
 
+    disabled: true
     stream: neon
     project: 'topoprocessing'
     project-name: 'topoprocessing'
@@ -21,6 +22,7 @@
     jobs:
       - odl-maven-jobs
 
+    disabled: true
     stream: fluorine
     project: 'topoprocessing'
     project-name: 'topoprocessing'
@@ -39,6 +41,7 @@
       - '{project-name}-distribution-check-{stream}'
       - odl-maven-jobs
 
+    disabled: true
     stream: oxygen
     project: 'topoprocessing'
     project-name: 'topoprocessing'
@@ -55,6 +58,8 @@
     name: topoprocessing-sonar
     jobs:
       - gerrit-maven-sonar
+
+    disabled: true
     project: 'topoprocessing'
     project-name: 'topoprocessing'
     branch: 'master'
