Revert "Remove CLM jobs to comply with Sonatype's TOS"
This reverts commit 4f2f6c2e665a9bf3a8c40177bbe1ea0fc0cc01bd.

Change-Id: Ifa2488cbdc3074d52cfb7b78f1d3965dfc1c0860
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/archetypes/archetypes.yaml
+++ b/jjb/archetypes/archetypes.yaml
@@ -2,9 +2,7 @@
 - project:
     name: archetypes-neon
     jobs:
-      # TODO: Add CLM jobs back once issue is resolved:
-      #       https://jira.linuxfoundation.org/browse/RELENG-1165
-      # - gerrit-maven-clm
+      - gerrit-maven-clm
       - '{project-name}-merge-{stream}':
           build-timeout: 180
           cron: '@daily'
@@ -28,9 +26,7 @@
 - project:
     name: archetypes-fluorine
     jobs:
-      # TODO: Add CLM jobs back once issue is resolved:
-      #       https://jira.linuxfoundation.org/browse/RELENG-1165
-      # - gerrit-maven-clm
+      - gerrit-maven-clm
       - '{project-name}-merge-{stream}':
           build-timeout: 180
           cron: '@daily'
