--- a/jjb/releng-templates-java.yaml
+++ b/jjb/releng-templates-java.yaml
@@ -3,9 +3,7 @@
     name: odl-maven-jobs
 
     jobs:
-      # TODO: Add CLM jobs back once issue is resolved:
-      #       https://jira.linuxfoundation.org/browse/RELENG-1165
-      # - gerrit-maven-clm
+      - gerrit-maven-clm
 
       # TODO: Figure out what's wrong with the gerrit-maven-merge job.
       # - gerrit-maven-merge:
