Adjust scripts for common distribution
Change-Id: I2a03d5d1341aae01abb6325e381474f6013a91b1
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/integration/distribution/distribution-jobs.yaml
+++ b/jjb/integration/distribution/distribution-jobs.yaml
@@ -84,6 +84,7 @@
     profile: '-Pmanaged'
     forbidden-files: 'opendaylight/**'
     karaf-version: karaf4
+    dist-pom: 'distribution/pom.xml'
 
     stream:
       - neon:
@@ -181,6 +182,7 @@
     profile: '-Punmanaged'
     files: 'opendaylight/**'
     karaf-version: odl
+    dist-pom: 'distribution/opendaylight/pom.xml'
 
     stream:
       - neon:
