--- a/jjb/integration/distribution/distribution-templates.yaml
+++ b/jjb/integration/distribution/distribution-templates.yaml
@@ -358,7 +358,7 @@
       - distribution-check-warn-9191
       - distribution-check-warn-9192
       - integration-upload-distribution:
-          dist-pom: distribution/pom.xml
+          dist-pom: '{dist-pom}'
       - distribution-check-bootup
 
     publishers:
