--- a/jjb/integration/distribution/distribution-jobs.yaml
+++ b/jjb/integration/distribution/distribution-jobs.yaml
@@ -198,6 +198,7 @@
           karaf-version: odl
           dependencies: >
               distribution-merge-managed-{stream},
+              snmp4sdn-merge-{stream},
               sxp-merge-{stream},
               transportpce-merge-{stream},
               tsdr-merge-{stream},
