--- a/jjb/integration/distribution/distribution-jobs.yaml
+++ b/jjb/integration/distribution/distribution-jobs.yaml
@@ -43,10 +43,12 @@
           karaf-version: odl
           # Self-Managed projects repos and features:
           sm-repos: >
+              mvn:org.opendaylight.snmp4sdn/features-snmp4sdn//xml/features,
               mvn:org.opendaylight.sxp/features-sxp//xml/features,
               mvn:org.opendaylight.transportpce/features-transportpce//xml/features,
               mvn:org.opendaylight.tsdr/features-tsdr//xml/features,
           sm-features: >
+              odl-snmp4sdn-snmp4sdn
               odl-sxp-routing,
               odl-transportpce,
               odl-transportpce-api,
@@ -198,6 +200,7 @@
           karaf-version: odl
           dependencies: >
               distribution-merge-managed-{stream},
+              snmp4sdn-merge-{stream},
               sxp-merge-{stream},
               transportpce-merge-{stream},
               tsdr-merge-{stream},
