--- a/openstack-hot/csit-apex-3-instance-type.yaml
+++ b/openstack-hot/csit-apex-3-instance-type.yaml
@@ -49,6 +49,7 @@ resources:
     192_subnet:
         type: OS::Neutron::Subnet
         properties:
+            name: APEX_192_subnet
             network_id: {get_resource: 192_network}
             cidr: 192.0.2.0/24
             gateway_ip: 192.0.2.1
@@ -61,11 +62,10 @@ resources:
         properties:
             count: {get_param: vm_0_count}
             resource_def:
-                type: generic-server.yaml
+                type: apex-server.yaml
                 properties:
                     job_name: {get_param: job_name}
                     silo: {get_param: silo}
-                    ssh_key: {get_param: silo}
                     index: "%index%"
                     group: "0"
                     vm_flavor: {get_param: vm_0_flavor}
@@ -76,11 +76,10 @@ resources:
         properties:
             count: {get_param: vm_1_count}
             resource_def:
-                type: generic-server.yaml
+                type: apex-server.yaml
                 properties:
                     job_name: {get_param: job_name}
                     silo: {get_param: silo}
-                    ssh_key: {get_param: silo}
                     index: "%index%"
                     group: "1"
                     vm_flavor: {get_param: vm_1_flavor}
@@ -91,23 +90,11 @@ resources:
         properties:
             count: {get_param: vm_2_count}
             resource_def:
-                type: generic-server.yaml
+                type: apex-server.yaml
                 properties:
                     job_name: {get_param: job_name}
                     silo: {get_param: silo}
-                    ssh_key: {get_param: silo}
                     index: "%index%"
                     group: "2"
                     vm_flavor: {get_param: vm_2_flavor}
                     vm_image: {get_param: vm_2_image}
-
-outputs:
-    vm_0_ips:
-        description: IP addresses of the 1st vm types
-        value: {get_attr: [vm_0_group, ip]}
-    vm_1_ips:
-        description: IP addresses of the 2nd vm types
-        value: {get_attr: [vm_1_group, ip]}
-    vm_2_ips:
-        description: IP addresses of the 3rd vm types
-        value: {get_attr: [vm_2_group, ip]}
