Fix deploy job goals to use 'deploy' goal
We need to call the deploy goal our the release job won't work.
Also removes the unnecessary profile since that profile does not
exist in the pom.xml being passed.

Change-Id: Icbfdbdc171ee1fd3ab717e9d9a9246e0f5e6247e
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/distribution/distribution-jobs.yaml
+++ b/jjb/integration/distribution/distribution-jobs.yaml
@@ -221,7 +221,7 @@
 
     project: 'integration/distribution'
     project-name: 'distribution'
-    mvn-goals: 'clean install dependency:tree -DoutputFile=dependency_tree.txt -Punmanaged -f opendaylight/pom.xml'
+    mvn-goals: 'clean deploy -f opendaylight/pom.xml'
     mvn-settings: 'integration-distribution-settings'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
     email-upstream: '[int/dist]'
