Clone common-packer from github
Change-Id: I78ab2623b9d147775bd9810a978b9fb76b29fb50
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "jjb/global-jjb"]
 	path = jjb/global-jjb
 	url = https://github.com/lfit/releng-global-jjb
-[submodule "packer/common-packer"]
+[ubmodule "packer/common-packer"]
 	path = packer/common-packer
-	url = https://gerrit.linuxfoundation.org/infra/releng/common-packer.git
+	url = https://github.com/lfit/releng-common-packer.git
