--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/lfit/releng-global-jjb
 [submodule "packer/common-packer"]
 	path = packer/common-packer
-	url = https://gerrit.linuxfoundation.org/infra/releng/common-packer.git
+	url = https://github.com/lfit/releng-common-packer.git
