Make network name unique to the job
Use the passed in variables to create a unique network name.

Change-Id: Icebf8e0567f9ad11bd6e529bf3779ca472ad080a
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/openstack-hot/csit-apex-3-instance-type.yaml
+++ b/openstack-hot/csit-apex-3-instance-type.yaml
@@ -39,11 +39,16 @@ parameters:
         type: string
 
 resources:
-
     192_network:
         type: OS::Neutron::Net
         properties:
-            name: APEX_192_network
+            name:
+                str_replace:
+                    template: SILO-JOB_NAME-NET
+                    params:
+                        "SILO": {get_param: silo}
+                        "JOB_NAME": {get_param: job_name}
+                        "NET": 'APEX_192'
             port_security_enabled: false
 
     192_subnet:
