Add description for vm_2_image
Change-Id: If63529aa0477a2606c4b897e902b009c881463f3
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/openstack-hot/csit-apex-3-instance-type.yaml
+++ b/openstack-hot/csit-apex-3-instance-type.yaml
@@ -37,6 +37,7 @@ parameters:
         description: Flavor to run instance on for 3rd VM type
     vm_2_image:
         type: string
+        description: Image to run instance on for 3rd VM type
 
 resources:
 
