--- a/openstack-hot/csit-apex-3-instance-type.yaml
+++ b/openstack-hot/csit-apex-3-instance-type.yaml
@@ -64,6 +64,7 @@ resources:
                         "SUBNET": 'APEX_192_subnet'
             network_id: {get_resource: 192_network}
             cidr: 192.0.2.0/24
+            gateway_ip: 192.0.2.1
             allocation_pools:
                 - start: 192.0.2.2
                   end: 192.0.2.50
