Update user_data script to use /opt/ciman
Patch I7cd0d6a5282b8e11d76db735279825052dedb7e6 was merged to
finalize migration of jenkins-init-scripts to global-jjb however
the openstack-hot templates were not updated and is now causing
csit jobs to fail.

Change-Id: I7c50273a00c318635c75c995aa175611b5fe3ef9
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/openstack-hot/generic-server.yaml
+++ b/openstack-hot/generic-server.yaml
@@ -66,8 +66,8 @@ resources:
                 do
                     echo "Waiting until devvexx.opendaylight.org is resolvable..."
                 done
-                git clone git://devvexx.opendaylight.org/mirror/releng/builder /builder
-                /builder/jenkins-scripts/jenkins-init-script.sh
+                git clone --recurse-submodules git://devvexx.opendaylight.org/mirror/releng/builder /opt/ciman
+                /opt/ciman/jjb/global-jjb/jenkins-init-scripts/init.sh
 
 outputs:
     ip:
