Add TSDR docs jobs
Issue: DOCS-69
Change-Id: I1cdb4cce71fa3e6614a420aa7669c132de650a9f
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/tsdr/tsdr.yaml
+++ b/jjb/tsdr/tsdr.yaml
@@ -2,6 +2,11 @@
 - project:
     name: tsdr-neon
     jobs:
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: tsdr
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/opendaylight-tsdr/47532/
+          rtd-token: 96c97641155132afcc5900bafc68af3364d91c99
       - odl-maven-jobs
 
     stream: neon
@@ -19,6 +24,11 @@
 - project:
     name: tsdr-fluorine
     jobs:
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: tsdr
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/opendaylight-tsdr/47532/
+          rtd-token: 96c97641155132afcc5900bafc68af3364d91c99
       - odl-maven-jobs
 
     stream: fluorine
