--- a/jjb/daexim/daexim.yaml
+++ b/jjb/daexim/daexim.yaml
@@ -3,6 +3,11 @@
     name: daexim-neon
     jobs:
       - '{project-name}-distribution-check-{stream}'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: daexim
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-daexim/47611/
+          rtd-token: 76284f12638574f131cdccdf257d852d07c195fc
       - odl-maven-jobs
 
     project: 'daexim'
@@ -21,6 +26,11 @@
     name: daexim-fluorine
     jobs:
       - '{project-name}-distribution-check-{stream}'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: daexim
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-daexim/47611/
+          rtd-token: 76284f12638574f131cdccdf257d852d07c195fc
       - odl-maven-jobs
 
     project: 'daexim'
