Added the SFC jobs to CSIT jobs list
- Fix the number of compute nodes in SFC jobs
- Enabled SFC neon job

Change-Id: If8831e4a524e9d577b0a9c53fa4cf15c7b72d136
Signed-off-by: gvrangan <venkatrangang@hcl.com>

--- a/jjb/netvirt/netvirt-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-multi-openstack.yaml
@@ -273,8 +273,11 @@
           testplan: '{project}-extensions-sfc.txt'
 
     stream:
-      - fluorine:
+      - neon:
           branch: 'master'
+          ovs-install: 'v2.9.2'
+      - fluorine:
+          branch: 'stable/fluorine'
           ovs-install: 'v2.9.2'
       - oxygen:
           branch: 'stable/oxygen'
