Add aaa docs jobs
Issue: DOCS-69
Change-Id: Iaf52e19b7308ebbe20290f0d4028a9169c45f6ca
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/aaa/aaa.yaml
+++ b/jjb/aaa/aaa.yaml
@@ -3,6 +3,11 @@
     name: aaa-neon
     jobs:
       - '{project-name}-distribution-check-{stream}'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: aaa
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-aaa/47615/
+          rtd-token: 621132230e1307d38f4aaf27e669d7dfdf98532f
       - odl-maven-jobs
 
     stream: neon
@@ -21,6 +26,11 @@
     name: aaa-fluorine
     jobs:
       - '{project-name}-distribution-check-{stream}'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: aaa
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-aaa/47615/
+          rtd-token: 621132230e1307d38f4aaf27e669d7dfdf98532f
       - odl-maven-jobs
 
     stream: fluorine
