Add transportpce docs jobs
Issue: DOCS-69
Change-Id: I6a7fbbb95ebf5a35027243ac74fc44f761567eb6
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/transportpce/transportpce.yaml
+++ b/jjb/transportpce/transportpce.yaml
@@ -2,6 +2,11 @@
 - project:
     name: transportpce-neon
     jobs:
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: transportpce
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-transportpce/47688/
+          rtd-token: 6f37ba63226bdcc6c823ee455e62237cf68813fd
       - odl-maven-jobs
 
     project: 'transportpce'
@@ -19,6 +24,11 @@
 - project:
     name: transportpce-fluorine
     jobs:
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: transportpce
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-transportpce/47688/
+          rtd-token: 6f37ba63226bdcc6c823ee455e62237cf68813fd
       - odl-maven-jobs
 
     project: 'transportpce'
