--- a/jjb/lispflowmapping/lispflowmapping.yaml
+++ b/jjb/lispflowmapping/lispflowmapping.yaml
@@ -4,6 +4,11 @@
     jobs:
       - '{project-name}-distribution-check-{stream}'
       - '{project-name}-maven-javadoc-jobs'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: lispflowmapping
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-lispflowmapping/47783/
+          rtd-token: 181be9dd804e4969b9f318a6f1988e3cbee9d9a8
       - odl-maven-jobs
 
     stream: neon
@@ -29,6 +34,11 @@
     jobs:
       - '{project-name}-distribution-check-{stream}'
       - '{project-name}-maven-javadoc-jobs'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: lispflowmapping
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-lispflowmapping/47783/
+          rtd-token: 181be9dd804e4969b9f318a6f1988e3cbee9d9a8
       - odl-maven-jobs
 
     stream: fluorine
