Update to global-jjb v0.24.1
Renames maven-release -> maven-stage per v0.24.0 release notes.

Change-Id: I831eb75f713eaf1a42d8d871c12818a274ce5476
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/distribution/distribution-jobs.yaml
+++ b/jjb/integration/distribution/distribution-jobs.yaml
@@ -220,7 +220,7 @@
 - project:
     name: distribution-release
     jobs:
-      - gerrit-maven-release
+      - gerrit-maven-stage
 
     project: 'integration/distribution'
     project-name: 'distribution'
