--- a/jjb/archetypes/archetypes.yaml
+++ b/jjb/archetypes/archetypes.yaml
@@ -7,7 +7,7 @@
           build-timeout: 180
           cron: '@daily'
           mvn-goals: clean install -V -Dmaven.compile.fork=true
-      - gerrit-maven-release
+      - gerrit-maven-stage
       - gerrit-maven-verify
       - gerrit-maven-verify-dependencies:
           build-timeout: 180
@@ -31,7 +31,7 @@
           build-timeout: 180
           cron: '@daily'
           mvn-goals: clean install -V -Dmaven.compile.fork=true
-      - gerrit-maven-release
+      - gerrit-maven-stage
       - gerrit-maven-verify
       - gerrit-maven-verify-dependencies:
           build-timeout: 180
