Add 1500 for APEX network mtu
Change-Id: I626408b22633bc33f3bf61f2d9107892fa600dd3
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/openstack-hot/csit-apex-3-instance-type.yaml
+++ b/openstack-hot/csit-apex-3-instance-type.yaml
@@ -51,6 +51,7 @@ resources:
                         "JOB_NAME": {get_param: job_name}
                         "NET": 'APEX_192_network'
             port_security_enabled: false
+            mtu: 1500
 
     192_subnet:
         type: OS::Neutron::Subnet
