Push down jacoco aggregate report file
Instruct yangtools to provide jacoco aggregate in a file, we will
be using it.

Change-Id: I3934d572873f536215377871996cd5b0391d58b9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/jjb/yangtools/yangtools.yaml
+++ b/jjb/yangtools/yangtools.yaml
@@ -84,6 +84,7 @@
     name: yangtools-sonar
     jobs:
       - gerrit-maven-sonar
+          mvn-params: -Dodl.jacoco.aggregateFile=$WORKSPACE/target/jacoco.exec
 
     project: 'yangtools'
     project-name: 'yangtools'
