--- a/jjb/yangtools/yangtools.yaml
+++ b/jjb/yangtools/yangtools.yaml
@@ -84,6 +84,7 @@
     name: yangtools-sonar
     jobs:
       - gerrit-maven-sonar
+        - maven-params: -Dodl.jacoco.aggregateFile=$WORKSPACE/target/jacoco.exec -Dsonar.jacoco.reportPaths=$WORKSPACE/target/jacoco.exec
 
     project: 'yangtools'
     project-name: 'yangtools'
