Point sonar to generated aggregate file
Now that we know where yangtools will generate the aggregate file,
point sonar at it.

Change-Id: I4fa54b5a773345204e4ab17c437cc416a10aef37
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/jjb/yangtools/yangtools.yaml
+++ b/jjb/yangtools/yangtools.yaml
@@ -84,7 +84,9 @@
     name: yangtools-sonar
     jobs:
       - gerrit-maven-sonar
-          mvn-params: -Dodl.jacoco.aggregateFile=$WORKSPACE/target/jacoco.exec
+          mvn-params: >
+            -Dodl.jacoco.aggregateFile=$WORKSPACE/target/jacoco.exec
+            -Dsonar.jacoco.reportPaths=$WORKSPACE/target/jacoco.exec
 
     project: 'yangtools'
     project-name: 'yangtools'
