Add packer jobs to build Ubuntu 18.04 images
Add packer jobs for Ubuntu 18.04 images for
GBP, mininet 2.5, 2.6 and 2.8.

Also make the template and platforms variables
order consistant in the file.

JIRA: RELENG-133
Change-Id: I9d5de7de831190aa06051dc388be8b37821127bd
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/releng-packer-jobs.yaml
+++ b/jjb/releng-packer-jobs.yaml
@@ -112,6 +112,7 @@
     platforms:
       - ubuntu-14.04
       - ubuntu-16.04
+      - ubuntu-18.04
     templates: gbp
 
 - project:
@@ -128,7 +129,9 @@
     build-timeout: 60
     cron: '00 H 1 * *'
 
-    platforms: ubuntu-16.04
+    platforms:
+      - ubuntu-16.04
+      - ubuntu-18.04
     templates: mininet-ovs-2.5
 
 - project:
@@ -145,7 +148,9 @@
     build-timeout: 75
     cron: '00 H 1 * *'
 
-    platforms: ubuntu-16.04
+    platforms:
+      - ubuntu-16.04
+      - ubuntu-18.04
     templates: mininet-ovs-2.6
 
 - project:
@@ -162,7 +167,9 @@
     build-timeout: 90
     cron: '00 H 1 * *'
 
-    platforms: ubuntu-16.04
+    platforms:
+      - ubuntu-16.04
+      - ubuntu-18.04
     templates: mininet-ovs-2.8
 
 - project:
@@ -196,5 +203,7 @@
     build-timeout: 90
     cron: '00 H 1 * *'
 
-    platforms: ubuntu-16.04
+    platforms:
+      - ubuntu-16.04
+      - ubuntu-18.04
     templates: kubernetes
